--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
 <i class="menu-item-icon fa fa-fw fa-user"></i> <br>关于我
 </a>
 </li>
-<li class=menu-item>
+<!-- <li class=menu-item>
 <a href=/404.html rel=section>
 <i class="menu-item-icon fa fa-fw fa-heartbeat"></i> <br>公益404
 </a>
-</li>
+</li> -->
 <li class="menu-item menu-item-search">
 <a href=javascript:; class=popup-trigger> <i class="menu-item-icon fa fa-search fa-fw"></i> <br> 搜索</a>
 </li>
